[metadata]
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE

url = https://github.com/XuehaiPan/mate
project_urls=
    Source = https://github.com/XuehaiPan/mate
    Documentation = https://github.com/XuehaiPan/mate/tree/HEAD/docs
    Bug Reports = https://github.com/XuehaiPan/mate/issues

keywords = Multi-Agent, Reinforcement Learning, RL, MARL, Deep Learning, OpenAI Gym
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
install_requires =
    numpy >= 1.17.0
    scipy >= 1.0.0
    gym >= 0.13.0
    pyglet >= 1.3.0
    pyyaml >= 5.1
    tqdm >= 4.11.0
    typing-extensions
python_requires = >= 3.7

[options.packages.find]
include =
    mate
    mate.*

[options.package_data]
mate=
    assets/*.yaml
    assets/*.yml
    assets/*.json
    assets/*.txt
    assets/images/*.png
